# CustomerBot

./: .env.example  Dockerfile  LICENSE.md  README.md  README_dev.md  README_template.md  pyproject.toml
.github/workflows/: hadolint.yml
admin/: Dockerfile  app.py  config.py
admin/views/: users.py
bot/: __main__.py
bot/analytics/: types.py
bot/analytics/amplitude/: client.py
bot/analytics/google/: client.py
bot/analytics/posthog/: client.py
bot/cache/: redis.py
bot/core/: config.py  loader.py
bot/database/: database.py
bot/database/models/: base.py  user.py
bot/handlers/: __init__.py  callback.py  export_users.py  functions.py  info.py  message.py  new_chat.py  review.py  start.py  support.py
bot/keyboards/: default_commands.py
bot/keyboards/inline/: menu.py
bot/middlewares/: auth.py  channel_subscribe.py  database.py  i18n.py  logging.py  prometheus.py  throttling.py
bot/services/: analytics.py  users.py
bot/utils/: singleton.py  users_export.py
migrations/versions/: 2024-01-23_initial.py  2024-01-24_user_referrer.py  2024-06-23_add_bigint_id_to_users_table.py
