[tool.poetry]
name = "customer-bot-karelia-tour"
version = "0.1.0"
description = "Part of the contact center automation service"
authors = ["Roman Neronov <roman.nieronov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
pydantic-settings = "^2.0.3"
aiohttp = "^3.9.5"
icecream = "^2.1.3"

[tool.poetry.group.bot.dependencies]
aiogram = "^3.6.0"
asyncpg = "^0.29.0"
redis = "^5.0.4"
loguru = "^0.7.2"
sentry-sdk = {extras = ["loguru"], version = "^2.1.1"}
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
uvloop = "^0.19.0"
babel = "^2.15.0"
cachetools = "^5.3.2"
orjson = "^3.10.3"
alembic = "^1.13.1"
prometheus-client = "^0.20.0"

[tool.poetry.group.admin.dependencies]
gunicorn = "^22.0.0"
flask = "^3.0.3"
flask-admin = "^1.6.1"
flask-security-too = "^5.4.3"
flask-caching = "^2.3.0"
flask-babel = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
tablib = {extras = ["xlsx"], version = "^3.6.1"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
black = "^24.4.2"
isort = "^5.13.2"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "ANN401", "TD003", "FIX002", "COM812", "ISC001", "FBT001", "FBT002", "RUF", "ERA", "ARG005"]
cache-dir = "/tmp/ruff-cache/"
extend-exclude = ["logs", "configs", "migrations"]

[tool.ruff.isort]
no-lines-before = ["future", "standard-library"]
known-local-folder = ["bot", "admin"]

[tool.ruff.extend-per-file-ignores]
"tests/*.py" = ["ANN401", "S101", "S311"]

[tool.mypy]
python_version = "3.10"
files = "bot/*.py"
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_error_context = true
pretty = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
